--- a/index.html
+++ b/index.html
@@ -3,9 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aladdin | Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+
+    <!-- Navbar -->
+    <header>
+        <nav>
+            <h1 class="logo">My<span>Portfolio</span></h1>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Hero -->
+    <section class="hero">
+        <div class="hero-content">
+            <h2>Hi, I'm <span>Aladdin Q. Cagubcub</span></h2>
+            <p>Web Developer</p>
+            <button onclick="scrollToContact()">Let's Work</button>
+        </div>
+    </section>
+
+    <!-- About -->
+    <section id="about" class="glass">
+        <h2>About Me</h2>
+        <p>
+            I'm a passionate developer who loves creating modern, clean, and user-friendly websites.
+            I focus on performance, design, and smooth user experience.
+        </p>
+    </section>
+
+    <!-- Projects -->
+    <section id="projects">
+        <h2>Projects</h2>
+        <div class="projects">
+            <div class="card">
+                    <img  class="project-cover" src="images/proj1.png" alt="Aladdin Project">
+
+                <h3>Task Management System</h3>
+                <p>One of my major projects, a task management system for curriculum and instruction division</p>
+                        <a href="https://github.com/RipMickel/task_mgmt" target="_blank">View Project</a>
+
+            </div>
+           
+        </div>
+    </section>
+
+    <!-- Contact -->
+    <section id="contact" class="glass">
+        <h2>Contact Me</h2>
+        <form>
+            <input type="text" placeholder="Your Name" required>
+            <input type="email" placeholder="Your Email" required>
+            <textarea placeholder="Your Message" required></textarea>
+            <button type="submit">Send Message</button>
+        </form>
+    </section>
+
+    <footer>
+        <p>© 2026 Aladdin | All rights reserved</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
