--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aladdin | Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -34,7 +34,7 @@
     <section id="about" class="glass">
         <h2>About Me</h2>
         <p>
-            I'm a passionate developer who loves creating modern, clean, and user-friendly websites.
+            I'm a passionate developer who loves creating modern websites.
             I focus on performance, design, and smooth user experience.
         </p>
     </section>
