Added email for contact

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </section>
 
     <footer>
-        <p>© 2026 Aladdin | All rights reserved</p>
+        <p>© 2026 Aladdin | aladdinskie123@gmail.com</p>
     </footer>
 
     <script src="script.js"></script>
